<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>at.srfg.iot.clientdevices</groupId>
  <artifactId>devices.base</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>SRFG Lab Demonstrator Client</name>

  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	
    <repositories>
	  <repository>
	    <id>data-local</id>
	    <name>data</name>
	    <url>file://${project.basedir}/repo</url>
	  </repository>
	  
	   <repository>
        <id>rosjava_mvn</id>
        <name>Public Rosjava repository</name>
        <url>https://github.com/rosjava/rosjava_mvn_repo/raw/master</url>
      </repository>
      
      <repository>
        <id>jcenter</id>
        <url>https://jcenter.bintray.com/</url>
      </repository>
	</repositories>
  
   <build>
    <sourceDirectory>src/main/java</sourceDirectory>
	<!--<testSourceDirectory>src/test/java</testSourceDirectory> -->
    
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
     
      <!-- Attach sources to jar file -->
      <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                   <execution>
                          <id>attach-sources</id>
                          <goals>
                                 <goal>jar</goal>
                          </goals>
                   </execution>
            </executions>
      </plugin> 
	 <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.0.0</version>
    <!--<configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
        </configuration> -->
      </plugin> 
      
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- <version>2.12.1</version> -->
         <version>2.4.2</version>
          <configuration>
    		<excludes>
      			<exclude>**/*contexts*</exclude>
      			<!--  Ignore all inner subclasses -->
      			<exclude>**/*$*</exclude>
      			<exclude>**/*Manager*</exclude>
      			<exclude>**/*Mockup*</exclude>
      			<exclude>**/*Task*</exclude>
      			<exclude>**/*Context*</exclude>
      			<exclude>**/*Application*</exclude>
      			<exclude>**/*mockup*/**</exclude>
    		</excludes>
    		<includes>
				<include>**/**</include>
			</includes>
  		 </configuration>
       </plugin>
       
       <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-failsafe-plugin</artifactId>
		  <version>2.12.4</version>
		  <configuration>
		    <includes>
		      <include>**/*HTTP*</include>
		      <include>**/*TCP*</include>
		    </includes>
		  </configuration>
		  <executions>
		    <execution>
		      <goals>
		        <goal>integration-test</goal>
		        <goal>verify</goal>
		      </goals>
		    </execution>
		  </executions>
		</plugin>   
    </plugins>
  </build>
  
  <dependencies>
  		<!-- JUnit 4 for running JUnit tests -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

	    <dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <version>3.3.3</version>
	    </dependency>
		
		<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
		<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina 
			(Tomcat 8, not 9) -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20180813</version>
			<!-- <scope>provided</scope> -->
		</dependency>
		<!-- Dependencies removed from Classpath -->
		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.hk2.external/aopalliance-repackaged -->
		<dependency>
			<groupId>org.glassfish.hk2.external</groupId>
			<artifactId>aopalliance-repackaged</artifactId>
			<version>2.5.0-b42</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.enterprise/cdi-api -->
		<dependency>
			<groupId>javax.enterprise</groupId>
			<artifactId>cdi-api</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.xml.xquery/xqj-api 
        <dependency>
            <groupId>javax.xml.xquery</groupId>
            <artifactId>xqj-api</artifactId>
            <version>1.0</version>
        </dependency>
		-->
		<!-- https://mvnrepository.com/artifact/javax.el/el-api -->
		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>el-api</artifactId>
			<version>2.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.hk2/hk2-api -->
		<dependency>
			<groupId>org.glassfish.hk2</groupId>
			<artifactId>hk2-api</artifactId>
			<version>2.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javassist/javassist -->
		<dependency>
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.12.1.GA</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
		<dependency>
			<groupId>javax.inject</groupId>
			<artifactId>javax.inject</artifactId>
			<version>1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.interceptor/jboss-interceptors-api_1.1_spec -->
		<dependency>
			<groupId>org.jboss.spec.javax.interceptor</groupId>
			<artifactId>jboss-interceptors-api_1.1_spec</artifactId>
			<version>1.0.1.Final</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.core -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>4.2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.glassfish.hk2/osgi-resource-locator -->
		<dependency>
			<groupId>org.glassfish.hk2</groupId>
			<artifactId>osgi-resource-locator</artifactId>
			<version>1.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0.2</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse/yasson -->
		<dependency>
			<groupId>org.eclipse</groupId>
			<artifactId>yasson</artifactId>
			<version>1.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		
		<!-- org.apache.commons.io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.4</version>
		</dependency>

		<!-- SRFG common project -->
	   <dependency>
		   <groupId>at.srfg.iot.common</groupId>
		   <artifactId>asset-registry-connector</artifactId>
		   <version>0.0.1-SNAPSHOT</version>
	   </dependency>

	  <!--data model (i-asset semantic-lookup) -->
	  <!--<dependency>
		  <groupId>at.srfg.iot.common</groupId>
		  <artifactId>semantic-lookup-data-model</artifactId>
		  <version>0.0.1-SNAPSHOT</version>
	  </dependency>
	  <dependency>
		  <groupId>at.srfg.iot.common</groupId>
		  <artifactId>asset-data-model</artifactId>
		  <version>0.0.1-SNAPSHOT</version>
	  </dependency>
	  <dependency>
		  <groupId>at.srfg.iot.common</groupId>
		  <artifactId>common-root</artifactId>
		  <version>0.0.1-SNAPSHOT</version>
	  </dependency>-->

  </dependencies>
	<modules>
		<module>devices.basedevice</module>
		<module>devices.conveyorbelt</module>
		<module>devices.chasi</module>
		<module>devices.panda</module>
		<module>devices.IPSA</module>
		<module>devices.Peak2Pi</module>
	</modules>
</project>